// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toast /> Red Toast 1`] = `
<div
  className="box marginBottom3 paddingX4"
  style={
    Object {
      "maxWidth": 360,
      "width": "100vw",
    }
  }
>
  <div
    className="box fit paddingX6 paddingY6 pill redBg"
  >
    <div
      className="box itemsCenter marginLeftN2 marginRightN2 xsDisplayFlex"
    >
      <div
        className="box flexGrow justifyCenter paddingX2 xsDirectionColumn xsDisplayFlex"
      >
        <div
          className="Text fontSize3 white alignCenter breakWord fontWeightNormal"
        >
          Same great profile, slightly new look. Learn more?
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Toast /> Text + Image + Button 1`] = `
<div
  className="box marginBottom3 paddingX4"
  style={
    Object {
      "maxWidth": 360,
      "width": "100vw",
    }
  }
>
  <div
    className="box darkGrayBg fit paddingX6 paddingY6 pill"
  >
    <div
      className="box itemsCenter marginLeftN2 marginRightN2 xsDisplayFlex"
    >
      <div
        className="box flexNone justifyCenter paddingX2 xsDisplayFlex"
      >
        <div
          className="Mask rounding2 willChangeTransform"
          style={
            Object {
              "height": 48,
              "width": 48,
            }
          }
        >
          <img
            alt=""
            src="https://i.pinimg.com/474x/b2/55/ed/b255edbf773ffb3985394e6efb9d2a49.jpg"
          />
        </div>
      </div>
      <div
        className="box flexGrow justifyCenter paddingX2 xsDirectionColumn xsDisplayFlex"
      >
        <div
          className="Text fontSize3 white alignLeft breakWord fontWeightNormal"
        >
          Saved to
           
          <a
            className="link accessibleFocusStyle block"
            href="https://www.pinterest.com/search/pins/?q=home%20decor"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            rel={null}
            target={null}
          >
            Home decor
          </a>
        </div>
      </div>
      <div
        className="box flexNone paddingX2"
      >
        <button
          className="button lg solid gray enabled block"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <div
            className="Text fontSize3 darkGray alignCenter fontWeightBold"
          >
            Undo
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Toast /> Text + Image 1`] = `
<div
  className="box marginBottom3 paddingX4"
  style={
    Object {
      "maxWidth": 360,
      "width": "100vw",
    }
  }
>
  <div
    className="box darkGrayBg fit paddingX6 paddingY6 pill"
  >
    <div
      className="box itemsCenter marginLeftN2 marginRightN2 xsDisplayFlex"
    >
      <div
        className="box flexNone justifyCenter paddingX2 xsDisplayFlex"
      >
        <div
          className="Mask rounding2 willChangeTransform"
          style={
            Object {
              "height": 48,
              "width": 48,
            }
          }
        >
          <img
            alt=""
            src="https://i.pinimg.com/474x/b2/55/ed/b255edbf773ffb3985394e6efb9d2a49.jpg"
          />
        </div>
      </div>
      <div
        className="box flexGrow justifyCenter paddingX2 xsDirectionColumn xsDisplayFlex"
      >
        <div
          className="Text fontSize3 white alignLeft breakWord fontWeightNormal"
        >
          Saved to
           
          <a
            className="link accessibleFocusStyle block"
            href="https://www.pinterest.com/search/pins/?q=home%20decor"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            rel={null}
            target={null}
          >
            Home decor
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Toast /> Text Only 1`] = `
<div
  className="box marginBottom3 paddingX4"
  style={
    Object {
      "maxWidth": 360,
      "width": "100vw",
    }
  }
>
  <div
    className="box darkGrayBg fit paddingX6 paddingY6 pill"
  >
    <div
      className="box itemsCenter marginLeftN2 marginRightN2 xsDisplayFlex"
    >
      <div
        className="box flexGrow justifyCenter paddingX2 xsDirectionColumn xsDisplayFlex"
      >
        <div
          className="Text fontSize3 white alignCenter breakWord fontWeightNormal"
        >
          Same great profile, slightly new look. Learn more?
        </div>
      </div>
    </div>
  </div>
</div>
`;
